# deutsche-bahn-traveltimes

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  railway.json  requirements.txt
app/: app.py  config.py
app/services/: od.py  zones.py
app/ui/: __init__.py  datapage.py  datapage_en.py  index.html
app/ui/static/: app.js  style.css
data/GTFS_regional_and_long_dist/: agency.txt  attributions.txt  calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  stops.txt  transfers.txt  trips.txt
data/od/period=2026W09/day_type=weekday/: hour=02.arrow  hour=02.csv  hour=03.arrow  hour=03.csv
data/od_regional/period=2026W09/day_type=weekday/: hour=02.arrow  hour=03.arrow
data/shapefiles_vg1000_germany/: aktualitaet.txt
data/shapefiles_vg1000_germany/vg1000_ebenen_1231/: VG1000_KRS.dbf  VG1000_KRS.shp  VG1000_KRS.shx  VG1000_LAN.dbf  VG1000_LAN.shp  VG1000_LAN.shx  VG1000_LI.dbf  VG1000_LI.shp  VG1000_LI.shx  VG1000_RBZ.dbf  VG1000_RBZ.shp  VG1000_RBZ.shx  VG1000_STA.dbf  VG1000_STA.shp  VG1000_STA.shx  VGTB_ATT.dbf  VGTB_RGS.dbf  VG_DATEN.dbf  VG_IBZ.dbf  VG_LKZ.dbf  VG_WERTE.dbf
src/analysis/: zone_od_car_traveltimes.py  zone_od_traveltimes.py
src/gtfs_toolbox/: __init__.py  geo_utilities.py  gtfs_io_utilities.py  gtfs_subset_utilities.py  zoning.py
src/raptor_core/: __init__.py  raptor.py  raptor_indices.py
tests/: test_gtfs_utils.py  test_od_service.py  test_raptor.py
