[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deutsche-bahn-traveltimes"
version = "0.1.0"
description = "GTFS-based railway accessibility analysis, RAPTOR routing, OD generation, and FastAPI map UI for Germany."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "geopandas>=0.14",
    "pyarrow>=14.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gtfs_toolbox*", "raptor_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]